nav-layout issues resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,21 +121,6 @@ section {
   font-size: 14px;
   background: #37517e;
 }
-#footer .footer-newsletter {
-  padding: 50px 0;
-  background: #f3f5fa;
-  text-align: center;
-  font-size: 15px;
-  color: #444444;
-}
-#footer .footer-newsletter h4 {
-  font-size: 24px;
-  margin: 0 0 20px 0;
-  padding: 0;
-  line-height: 1;
-  font-weight: 600;
-  color: #37517e;
-}
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
@@ -182,3 +167,33 @@ section {
   height: 36px;
 }
 
+.collapse-nav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: rgb(39, 34, 34);
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+.collapse-nav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+.collapse-nav a:hover {
+  color: #F1F1F1;
+}
+.collapse-nav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
